--- a/blog/2015/11/application-commons.Rmd
+++ b/blog/2015/11/application-commons.Rmd
@@ -14,6 +14,8 @@ output:
 
 。性能问题归根到底是数据结构和算法问题。不同的是，有些情况我们只需要理解（如数据库的索引结构和数据算法，JVM GC算法）并合理使用，而有些情况，需要我们手动实现。
 
++ API实现的时候，如果某些API需要权限认证，并在接口内使用认证信息，那么，最好不要将该认证信息作为API的参数绑定（最典型的做法就是Spring Controller的自动绑定），因为，这样会导致接口定义“侵入”，同时对于API文档的生成也不友好；同时，如果使用swagger之类的api框架，则会带来兼容问题。
+
 。需求调研的核心是“考察人的需求”，因此，应当“以人为中心”，引导被调查者说出自身的需求。
 
 。一定要重视开发期测试的方便性。比如，必须可以配置权限的开关。免得开发期每个人验证问题时必须做繁琐的登录验证。还有就是部署时期的不同的profile的设定。
