--- a/blog/2014/2014-08/Translation of A Role of the Study of Programming Languages int the Education of a Programmer.Rmd
+++ b/blog/2014/2014-08/Translation of A Role of the Study of Programming Languages int the Education of a Programmer.Rmd
@@ -1,14 +1,18 @@
-**声明：** 所写均为个人阅读所思所想，限于知识层次和结构，难免有错误遗漏之处，请批判阅读。探讨可循：<mr.geek.ma@gmail.com>
+---
+author: "patrick.unicorn"
+output:
+  html_document:
+    css: ../css/main.css
+    highlight: null
+    theme: null
+---
+
+编程语言学习在编程教育中所扮演的角色
+===
+
+Daniel P.Friedman关于程序语言学习的一篇文章**[ 《A Role of the Study of Programming Languages int the Education of a Programmer：编程语言学习在编程教育中所扮演的角色》][5]**。这篇文章提出的观点对我个人感触颇深，因此决定将它翻译出来。**另外，虽然文中的程序例子很少，但是具备对scheme的初步了解，会有助于理解这篇文章。另外，如果对比原文，你会发现很多地方感觉少了“句子”，这是因为更多的时候我进行了意译，做了很多省略**。译文中的所有程序均可以在[DrRacket][0](需要设置语言为R5RS)下运行。
 
 * * *
-
-Daniel P.Friedman关于程序语言学习的一篇文章**[ 《A Role of the Study of Programming Languages int the Education of a Programmer：编程语言学习在编程教育中所扮演的角色》][5]**。这篇文章提出的观点对我个人感触颇深，因此决定将它翻译出来。第一次翻译长篇(一共33页)的论文，预计前后会耗时了一周多。每句都力求能仔细斟酌，但限于语言能力，也难免有不妥之处了，只能以后慢慢修整了。**另外，虽然文中的程序例子很少，但是具备对scheme的初步了解，会有助于理解这篇文章。另外，如果对比原文，你会发现很多地方感觉少了“句子”，这是因为更多的时候我进行了意译，对于某些长句中的无关细节，做了省略**。译文中的所有程序均可以在[DrRacket][0](需要设置语言为R5RS)下运行。下面是译文（不断修正完善中）：
-
-<!--more-->
-
-* * *
-
-一些客套话：)。
 
 对于程序员教育，编程语言学习扮演着两种角色。首先，学习编程语言应该要教会你怎么避免一些错误的想法。接下来我会通过**动态作用域的历史**，**类型系统的讨论**以及**在正确实现尾递归过程中的可能错误**几方面来说明这点。再次，学习编程语言应该教会你如何汲取一些好的想法从而形成独立认识。我会通过解决尾递归的一些问题来说明这点。这些问题需要一些形式体系，但大部分都是直观的，只需要学习者具备开放性思维即可。当然，也许编程语言学习对于程序员教育还有其他角色意义，但是，上面的两点在我所教的毕业生中体现的最为明显和清晰。
 
