--- a/blog/2014/2014-08/translation-of-a-role-of-the-study-of-programming-languages-int-the-education-of-a-programmer.Rmd
+++ b/blog/2014/2014-08/translation-of-a-role-of-the-study-of-programming-languages-int-the-education-of-a-programmer.Rmd
@@ -2,7 +2,7 @@
 author: "patrick.unicorn"
 output:
   html_document:
-    css: ../css/main.css
+    css: ../../css/main.css
     highlight: null
     theme: null
 ---
