--- a/blog/2016/gradle.Rmd
+++ b/blog/2016/gradle.Rmd
@@ -2,7 +2,7 @@
 author: "patrick.unicorn"
 output:
   html_document:
-    css: ../../css/main.css
+    css: ../css/main.css
     highlight: null
     theme: null
 ---
@@ -11,6 +11,63 @@ Gradle
 ===
 
 * * *
+
+更多关于gradle的笔记内容，参看我的[Diigo][1]，需要翻墙:)。
+
+[1]: https://www.diigo.com/user/patrick-unicorn/gradle
+
+## Groovy基础
+
++ 定义变量使用`def`，如`def myvar = 1`
+
++ `return`并不必须，分号也可以省略。一般建议return还是不要省略。
+
+```
+def myFunction() {
+    int i = 0
+    // 省略
+    return i
+}
+```
+
++ 单引号`''`，对应于Java中的String变量，不对`$`转义；`""`，类似与模板语言中的模板字符串，会对`$`转义；三引号`'''..'''`，类似于C#中的`@""`，支持自由换行。
+
++ 调用函数不必加括号
+
+```
+def myFunc() {
+
+}
+
+// 调用
+myFunc
+```
+
++ java中的基本类型在Groovy中均有包装类型
+
++ 容器类型包含三种：
+
+1. List
+
+```
+// List 由[]定义，其元素可以是任何对象 
+def aList = [5,'string',true] 
+```
+
+2. Map
+
+```
+def aMap = ['key1':'value1','key2':true] 
+```
+
+3. Range
+
+```
+def aRange = 1..5  // 包含[1, 5]
+def aRange = 1..<5 // 包含[1, 5)
+```
+
+## Gradle使用
 
 + Java构建工具对比
 
@@ -74,10 +131,12 @@ task helloworld << {
 
 + `gradle -i` 将输出日志级别设置为INFO，这样可以看到更多详细的日志信息。
 
-+ `gradle - s` 可以在出现错误时，打印出堆栈信息
++ `gradle -s` 可以在出现错误时，打印出堆栈信息
 
 + `gradle properties` 显示出当前项目中所有可用的属性，包括**脚本文件中定义的**、**通过命令行[-P]传入的**、**属性文件**。
 
 + Grade提供了守护进程，可以避免每次构建都重新加载JVM，这样可以极大的提高效率。 执行命令时，加入`-daemon`就可以。 该进程在3个小时空闲后，会自动关闭。 也可以使用`gradel --stop`主动关闭。 如果希望构件时不使用守护进程，可以加入`--no-daemon`。
+
++ `gradle wrapper`用于初始化一个gradle项目，会生成gradlw.jar、build.script等等。
 
 + 
