--- a/blog/2016/03/gradle.Rmd
+++ b/blog/2016/03/gradle.Rmd
@@ -2,7 +2,7 @@
 author: "patrick.unicorn"
 output:
   html_document:
-    css: ../css/main.css
+    css: ../../css/main.css
     highlight: null
     theme: null
 ---
