--- a/blog/2016/06/a-little-java.Rmd
+++ b/blog/2016/06/a-little-java.Rmd
@@ -2,7 +2,7 @@
 author: "patrick.unicorn"
 output:
   html_document:
-    css: ../css/main.css
+    css: ../../css/main.css
     highlight: null
     theme: null
 ---
@@ -22,6 +22,7 @@ output:
 出自书中的第四章，如下：
 
 ```
+
 ```
 
 需要将其与之前翻译的Lambda表达式联系，其表达自然数的方式与Lambda表达式如出一辙。
@@ -130,9 +131,7 @@ class Sausage extends PizzaD {
 }
 ```
 
-这个例子的编程方法，很违反通常的“OOP”编程模式，很不“自然”，不太容易理解“意图”，
- 通过下面的用例，可以更容易看出其设计思想：
-
+用例：
 
 ```
 public static void main(String[] args) {
@@ -155,7 +154,11 @@ public static void main(String[] args) {
 这种设计方法其实更函数式化编程，在三个方法的实现中，利用“构造函数”实现了“递归迭代”的思想。比如remA方法，调用它的时候会“向上遍历”所有的“pizzaD”类型实例，并调用其remA方法。
 
 <blockquote>
-一个小技巧：平时看源码的时候，如果对某一段代码不甚理解，不妨“刻意地暂时忘记改源码的实现，完全按照自己的思路实现同样功能，只需要写出“大概伪码思路”即可，然后，两相对比，通常就比较明了作者的设计思路了。
+小技巧：平时看源码的时候，如果对某一段代码不甚理解，可以采用如下两个方法辅助：
+
++ 想象一个应用场景，使用这组类（或函数）写些测试用例。
+
++ 不妨“刻意地暂时忘记改源码的实现，完全按照自己的思路实现同样功能，只需要写出“大概伪码思路”即可，然后，两相对比，通常就比较明了作者的设计思路了。
 </blockquote>
 
 同样的功能，通常的OOP实现方式如下：
@@ -226,4 +229,7 @@ class Sausage extends PizzaD { //香肠
     
 }
 ```
+
+用例：
+
 
