--- a/blog/2016/06/read-java-performance-definitive-guide.Rmd
+++ b/blog/2016/06/read-java-performance-definitive-guide.Rmd
@@ -14,7 +14,7 @@ output:
 + JVM 性能调优的过程实际上与 C++ 程序员在编译时通过测试选择编译参数，以及 PHP 码农在 php.ini
 文件中选择适当变量等过程非常类似。
 
-+ 编码和调优常常被认为是两个不同的专业领域：性能调优工程师只是竭力将 JVM 的性能发挥到极致，而开发人员只关心他们的代码逻辑是否正确。这种区分没有什么意义。任何从事Java相关工作的人都应该熟谙代码在 JVM 中的行为，以及如何调优才能提升性能。
++ 编码和调优常常被认为是两个不同的专业领域：性能调优工程师只是竭力将 JVM的性能发挥到极致，而开发人员只关心他们的代码逻辑是否正确。这种区分没有什么意义。任何从事Java相关工作的人都应该熟谙代码在 JVM 中的行为，以及如何调优才能提升性能。
 
 + 商业版 JVM 中和性能密切相关的一个特性就是 Java 飞行记录器（Java Flight Recorder，JFR）。
 
@@ -110,3 +110,11 @@ if (log.isLoggable(Level.FINE)) {
 + 由于客户端线程需要执行大量工作，零思考时间（面向吞吐量）测试更可能会遇到这种情形。因此，通常吞吐量测试比响应时间测试的线程数少，线程负载也小。通常吞吐量测试也会报告请求的平均响应时间。这是重要的信息，但它的变化并不表示性能有问题，除非报告的吞吐量相同。能够承受 500 OPS、响应时间 0.5 秒的服务器，它的性能要好过响应时间 0.3 秒但只有 400 OPS 的服务器。吞吐量测试总是在合适的热身期之后进行。
 
 + 响应时间测试和吞吐量测试（假设后者是基于客户端 - 服务器模式）之间的差别是，响应时间测试中的客户端线程会在操作之间休眠一段时间。这被称为思考时间。响应时间测试是尽量模拟用户行为：用户在浏览器输入URL，用一些时间阅读返回的网页，然后点击页面上的链接，花一些时间阅读返回的网页，等等。当测试中引入思考时间时，吞吐量就固定了：指定数量的客户端，在给定思考时间下总是得到相同的 TPS（少许差别，参见框注） 。基于这点，测量请求的响应时间就变得重要了：服务器的效率取决于它响应固定负载有多快。
+
++ 性能测试的结果会随时间而变。即便程序每次处理的数据集都相同，产生的结果也仍然会有差别。因为有很多因素会影响程序的运行，如机器上的后台进程，网络时不时的拥堵等。好的基准测试不会每次都处理相同的数据集，而是会在测试中制造一些随机行为以模拟真实的世界。这就会带来一个问题：运行结果之间的差别，到底是因为性能有变化，还是因为测试的随机性。可用以下方法来解决这个问题，即多次运行测试，然后对结果求平均。当被测代码发生变化时，就再多次运行测试，对结果求平均，然后比较两个平均值。
+
++ 比较基准测试的结果时，我们不可能知道平均值的差异是真的性能有差还是随机涨落。最好的办法是先假设“平均值是一样的” ，然后确定该命题为真时的几率。如果命题很大几率为假，我们就有信心认为平均值是真的有差别（虽然我们永远无法 100% 肯定） 。注：《测试技术计量》课程，有一些对实验结果进行比对的方法。
+
++ 因代码更改而进行的测试称为回归测试。在回归测试中，原先的代码称为基线（baseline） ，而新的代码称为试样（specimen） 。
+
++ 
