--- a/blog/2016/06/read-java-performance-definitive-guide.Rmd
+++ b/blog/2016/06/read-java-performance-definitive-guide.Rmd
@@ -11,6 +11,8 @@ output:
 
 * * *
 
+## 基本概念
+
 + JVM 性能调优的过程实际上与 C++ 程序员在编译时通过测试选择编译参数，以及 PHP 码农在 php.ini
 文件中选择适当变量等过程非常类似。
 
@@ -107,8 +109,6 @@ if (log.isLoggable(Level.FINE)) {
 
 + 在客户端 - 服务器的吞吐量测试中，并不考虑客户端的思考时间。客户端向服务器发送请求，当它收到响应时，立刻发送新的请求。持续这样的过程，等到测试结束时，客户端会报告它所完成的操作总量。客户端常常有多个线处理，所以吞吐量就是所有客户端所完成的操作总量。通常这个数字就是每秒完成的操作量，而不是测量期间的总操作量。这个指标常常被称作每秒事务数（TPS） 、每秒请求数（RPS）或每秒操作次数（OPS） 。
 
-+ 由于客户端线程需要执行大量工作，零思考时间（面向吞吐量）测试更可能会遇到这种情形。因此，通常吞吐量测试比响应时间测试的线程数少，线程负载也小。通常吞吐量测试也会报告请求的平均响应时间。这是重要的信息，但它的变化并不表示性能有问题，除非报告的吞吐量相同。能够承受 500 OPS、响应时间 0.5 秒的服务器，它的性能要好过响应时间 0.3 秒但只有 400 OPS 的服务器。吞吐量测试总是在合适的热身期之后进行。
-
 + 响应时间测试和吞吐量测试（假设后者是基于客户端 - 服务器模式）之间的差别是，响应时间测试中的客户端线程会在操作之间休眠一段时间。这被称为思考时间。响应时间测试是尽量模拟用户行为：用户在浏览器输入URL，用一些时间阅读返回的网页，然后点击页面上的链接，花一些时间阅读返回的网页，等等。当测试中引入思考时间时，吞吐量就固定了：指定数量的客户端，在给定思考时间下总是得到相同的 TPS（少许差别，参见框注） 。基于这点，测量请求的响应时间就变得重要了：服务器的效率取决于它响应固定负载有多快。
 
 + 性能测试的结果会随时间而变。即便程序每次处理的数据集都相同，产生的结果也仍然会有差别。因为有很多因素会影响程序的运行，如机器上的后台进程，网络时不时的拥堵等。好的基准测试不会每次都处理相同的数据集，而是会在测试中制造一些随机行为以模拟真实的世界。这就会带来一个问题：运行结果之间的差别，到底是因为性能有变化，还是因为测试的随机性。可用以下方法来解决这个问题，即多次运行测试，然后对结果求平均。当被测代码发生变化时，就再多次运行测试，对结果求平均，然后比较两个平均值。
@@ -116,5 +116,110 @@ if (log.isLoggable(Level.FINE)) {
 + 比较基准测试的结果时，我们不可能知道平均值的差异是真的性能有差还是随机涨落。最好的办法是先假设“平均值是一样的” ，然后确定该命题为真时的几率。如果命题很大几率为假，我们就有信心认为平均值是真的有差别（虽然我们永远无法 100% 肯定） 。注：《测试技术计量》课程，有一些对实验结果进行比对的方法。
 
 + 因代码更改而进行的测试称为回归测试。在回归测试中，原先的代码称为基线（baseline） ，而新的代码称为试样（specimen） 。
+
++ 所有的客户端 - 服务器测试都存在风险，即客户端不能足够快地向服务器发送数据。这可能是由于客户端机器的 CPU 不足以支持所需数量的客户端线程，也可能是因为客户端需要花大量时间处理响应才能发送新的请求。在这些场景中，测试衡量的其实是客户端性能而不是服务器性能的。其中的风险依赖于每个线程所承载的工作量（客户端机器的线程数和配置） 。由于客户端线程需要执行大量工作，零思考时间（面向吞吐量）测试更可能会遇到这种情形。因此，通常吞吐量测试比响应时间测试的线程数少，线程负载也小。通常吞吐量测试也会报告请求的平均响应时间。但平均响应时间的变化并不表示性能有问题，除非报告的吞吐量相同。能够承受 500 OPS、响应时间 0.5 秒的服务器，它的性能要好过响应时间 0.3 秒但只有 400 OPS 的服务器。吞吐量测试总是在合适的热身期之后进行。
+
++ 衡量响应时间有两种方法。响应时间可以报告为平均值：请求时间的总和除以请求数。响应时间也可以报告为百分位请求，例如第 90 百分位响应时间。如果 90% 的请求响应小于1.5 秒，且 10% 的请求响应不小于 1.5 秒，则 1.5 秒就是第 90 百分位响应时间。两种方法的一个区别在于，平均值会受离群值影响。这是因为计算平均值时包括了离群值。离群值越大，对平均响应时间的影响就会越大。对于Java应用来说，由于GC的存在，更容易引起这样的离群值。因此，一般最好同时考虑**平均响应时间**和至少一种**百分位响应时间**。
+
++  Faban（http://faban.org/）为例，这是一个开源的、基于 Java 的负载生成器。
+
++ 查找代码性能变化的正确方法是先决定一个显著性水平——比如 0.1——然后用 t 检验判定在这个显著性水平上试样是否与基线有差别。
+
+```
+统计学中的显著性与重要性
+
+显著性差异并不意味着统计结果对我们更重要。平均为 1 秒的变化很小的基线，和平均为 1.01 秒的变化很小的试样，其 p 值可能为 0.01：结果的差别有 99% 的置信度。
+但结果的差别只有 1%。现在假定另外一个测试，试样和基线有 10% 的变动，但是 p值为 0.2，即非统计显著。哪个测试的结果最为重要？这需要更多时间来审查。审查后发现虽然相差 10% 的测试的置信度低，但在用时上更加优化（如果可能的话，可以用更多数据来验证测试结果是否真的统计显著） 。仅仅因为 1% 差异的可能性更大，并不意味着它更重要。
+```
+
++  Apache Commons Mathematics 类库中的 TTest 可以计算统计结果的**置信度**。
+
++ 程序时不时会表现出随机行为，而一旦引入了随机性，我们就再也无法 100% 确定这些数据意味着什么了。使用统计分析有助于使结果变得更客观，但即便如此，仍然免不了主观臆断。理解这些数据背后的概率及其意义，有助于降低主观性。
+
+## 性能调优工具
+
++ 通常 CPU 使用率可以分为两类：用户态时间和系统态时间（Windows 上被称作 privileged time） 。用户态时间是 CPU 执行应用代码所占时间的百分比，而系统态时间则是 CPU 执行内核代码所占时间的百分比。系统态时间与应用相关，比如应用执行 I/O 操作，系统就会执行内核代码从磁盘读取文件，或者将缓冲数据发送到网络，等等。任何使用底层系统资源的操作，都会导致应用占用更多的系统态时间。性能调优的目的是，在尽可能短的时间内让 CPU 使用率尽可能地高。
+
++ CPU 使用率是一段时间内的平均数——5 秒、30 秒，也可能只有 1秒那么短（不过永远不会比这还要短） 。比如，10 分钟内一个程序执行的 CPU 使用率为50%。如果代码调优之后，CPU 使用率达到了 100%，说明程序的性能翻了倍：程序只需要执行 5 分钟就可以了。如果性能再翻倍，CPU 仍将是 100%，而执行完程序只要 2.5 分钟。CPU 使用率表示程序以多高的效率使用 CPU，所以数字越大，性能越好。
+
++ Linux查看CPU情况的工具是：**vmstat**。
+
++ 提高 CPU 使用率，一直都是批处理任务的目的。如果 CPU已经达到 100%，你仍然可以寻找优化，使得工作完成的更快（也要尽量保持 100%CPU 使
+用率） 。
+
++ 一般来说，多 CPU 多线程的目的仍然是通过不阻塞线程来提高 CPU 使用率，或者是在线程完成工作等待更多任务时降低 CPU 使用率。
+
++ 在多线程多 CPU 下，需要重点考虑以下 CPU 空闲的情形：即便有事可做，CPU 仍然空闲。这在程序没有更多线程可用的时候可能会出现。典型的情况是，应用以固定尺寸
+的线程池运行各种任务。每个线程同时只能执行一个任务，当线程被某个任务阻塞时（例如，等待数据库的响应） ，它就没法捡出新任务执行了。所以此时的情况就是，有任务需要执行（有事可做） ，却没有线程执行它们，结果就是 CPU 处在空闲时间。
+
++ Windows 和 Unix 系统都可以监控可运行（意味着没有被 I/O 阻塞、休眠等）的线程数。Unix 系统称之为运行队列（run queue） ，vmstat输出中就有。Windows 将这个数字称为处理器队列（processor quque），使用typeperf查看。但是需要注意：Unix 系统的运行队列长度（ vmstat 输出）是所有正在运行或待运行（即一旦有可用 CPU就可以运行）的线程数。而在 Windows 中，处理器队列长度就不包括正在运行的线程。
+
++ 如果试图运行的线程数超过了可用的 CPU，性能就会下降。一般来说，Windows 的处理器队列长度最好为 0，小于或等于 Unix 系统 CPU 的数目。如果在相当长时间内运行队列很长，说明系统已经过载，这时你应该检查系统，减少机器正在处理的工作量（将工作转移到其他机器或者优化代码） 。
+
++ 检查应用性能时，首先应该审查 CPU 时间。优化代码的目的是提升而不是降低（更短时间段内的）CPU 使用率。在试图深入优化应用前，应该先弄清楚为何 CPU 使用率低。
+
++ 监控磁盘使用率有两个目的。第一个目的与应用本身有关：如果应用正在做大量的磁盘I/O 操作，那 I/O 就很容易成为瓶颈。想了解何时磁盘 I/O 是瓶颈非常困难，因为这取决于应用的行为。
+
++ Linux系统使用**iostat**查看磁盘情况。
+
++ Linux 中可以查看进程的 47.89%的事件在 iowait （表示正在等待磁盘） ，这时表示磁盘速度赶不上IO请求了。
+
++ 监控磁盘使用率的第二个理由是——即便预计应用不会有很高的 I/O——有助于监控系统是否在进行内存交换。正在内存交换的系统——从主内存移动数据到磁盘或者反过来——一般来说，性能比较差。还有其他系统工具可以报告系统交换，例如 vmstat 输出中有两列（ si 是换进， so 是换出）可以警告我们系统是否正在交换。
+
++ 写入磁盘的应用遇到瓶颈，是因为写入数据的效率不高（吞吐量太低） ，或者是因为写入太多数据（吞吐量太高） 。
+
++ 网络使用率类似磁盘流量：应用可能没有充分利用网络所以带宽很低，或者写入某网络接口的总数据量超过了它所能处理的量。
+
++ 由于标准的系统工具通常只能显示某个网络接口发送和接收的数据报数和字节数，所以它们在监控网络流量方面差强人意。虽然这些信息有用，但无法告诉我们网络是没有充分利用，还是过度使用。
+
++ Unix 系统监控网络的基本工具是 netstat （大多数 Linux 发行版中还没有包括 netstat ，必须单独获得） 。Windows 上则可以在脚本中使用 typeperf ，监控网络使用率.
+
++ 有许多开源和商业工具可以监控网络带宽。Unix 里一个受欢迎的命令行工具就是 nicstat ，它可以显示每个网络接口的流量概要，包括网络接口的使用度。
+
++ typeperf 或 netstat 这样的工具可以报告读取和写入的数据，但是要计算网络使用率，你必须自己用脚本计算接口的带宽。虽然一般工具报告的单位是字节 / 秒（Bps） ，但请切记，带宽的单位是位 / 秒（bps） 。1000 兆位网络每秒处理 125 兆字节（MB） 。
+
++ 网络无法支持 100% 的使用率。对本地以太局域网来说，承受的网络使用率超过 40% 就意味着接口饱和了。如果网络是包交换或使用不同的传输介质，网络使用率的最大值就可能会不同，因此最好是评估网络架构之后再确定合适的值。这个值与 Java 无关，只是简单利用网络参数和操作系统接口。
+
++ 对基于网络的应用来说，务必要监控网络以确保它不是瓶颈。
+
++ `jcmd <process id> <command>` 用来打印Java进程的所涉及的基本类、线程和VM信息。
+
++ jconsole提供JVM活动的GUI视图。
+
++ jhat用于读取内存堆dump文件，用于分析。
+
++ jmap用于内存堆或其他JVM内存信息的dump。
+
++ jinfo查看JVM的系统属性，可以动态设置一些系统属性。
+
++ jstack转储Java进程中的线程栈信息，可以用于分析死锁的等。
+
++ jstat提供GC和类装载的信息。
+
++ jvm的GUI工具，可以用来剖析应用中的应用，也可以用来分析内存堆dump文件。
+
++ `jcmd process_id VM.uptime`或`jinfo -sysprops process_id`查看JVM运行多长时间了。
+
++ jconsole 的“VM 摘要”页可以显示程序所用的命令行，或者用 jcmd 显示`jcmd process_id VM.command_line`。
+
++ `jcmd process_id VM.flags [-all]`可以查看JVM的所有设置属性信息。类似与Gradle的`gradle properties`。
+
++ 诊断性能问题时，找出哪些标志起作用是很常见的事。JVM 运行时，可以用 jcmd 做到这一点。如果想找出特定 JVM 的平台特定的默认值是什么，那么在命令行上添加 -XX:+Printflagsfinal 会很有用：`java other_options -XX:+PrintFlagsFinal -version`，其与上面一项中的jcmd命令输出结果一样。
+
+```
+输出结果：uintx InitialHeapSize := 4169431040 {product / pd product / manageable /  C2 diagnostic}
+
+1. 冒号表示标志使用的是非认值
+2. product 表示在所有平台上的默认设置都是一致的。 
+3. pd product 表示标志的默认值是独立于平台的。
+4. manageable 表示运行时可以动态更改标志的值。
+5. C2 diagnostic表示为编译器工程师提供诊断输出，帮助理解编译器正以什么方式运作
+```
+
++ 另一种查看运行中的应用的此类信息的工具，叫作 jinfo 。 jinfo 的好处在于，它允许程序在执行时更改某个标志的值，并且可以单独检查输出单个标志的值。
+
+```
+jinfo 可以更改任意标志的值，但并不意味着 JVM 会响应更改。比如说，大多数影响 GC 算法行为的标志都在启动时使用，以决定垃圾收集器的行为方式。之后通过 jinfo 更改标志值，并不会导致 JVM 改变它的行为。它会以初始时的算法继续执行。所以这个技术只会对那些在 Printflagsfinal 输出中标记为 manageable 的标志有效
+```
 
 + 
