--- a/blog/2016/06/read-java-performance-definitive-guide.Rmd
+++ b/blog/2016/06/read-java-performance-definitive-guide.Rmd
@@ -222,4 +222,33 @@ if (log.isLoggable(Level.FINE)) {
 jinfo 可以更改任意标志的值，但并不意味着 JVM 会响应更改。比如说，大多数影响 GC 算法行为的标志都在启动时使用，以决定垃圾收集器的行为方式。之后通过 jinfo 更改标志值，并不会导致 JVM 改变它的行为。它会以初始时的算法继续执行。所以这个技术只会对那些在 Printflagsfinal 输出中标记为 manageable 的标志有效
 ```
 
++ `jstack process_id`或者`jcmd process_id Thread.print`可以打印出每个线程的详细输出，对于分析线程阻塞、死锁等很有用。
+
++ jconsole 或 jstat 可以提供应用已使用类的个数。 jstat 还能提供类编译相关的信息。
+
++ 几乎所有的监控工具都能报告一些 GC 活动的信息。 jconsole 可以用实时图显示堆的使用情况。 jcmd 可以执行 GC 操作。 jmap 可以打印堆的概况、永久代信息或者创建堆转储。jstat 可以为垃圾收集器正在执行的操作生成许多视图。
+
++ jvisualvm 的 GUI 界面可以捕获堆转储，也可以用命令行 jcmd 或 jmap 生成。堆转储是堆使用情况的快照，可以用不同的工具进行分析，包括 jvisualvm 和 jhat，或者外部工具，如：Eclipse Memory Analyzer Tool等。
+
++ 几乎所有的 Java 性能分析工具都是用 Java 写的，并以“关联” （attaching）应用的方式进行性能分析——意思是性能分析器开启与目标应用之间的 socket（或其他通信通道） 。随后目标应用和性能分析工具交换应用的行为信息。
+
++ 性能分析有两种模式：数据采样或数据探查。数据采样是性能分析的基本模式，带来的开销最小，这点很重要。性能分析为人诟病的一点就是，对应用进行的测量会改变它的性能。 
+
++ 探查分析器相比于采样分析器，侵入性更强，但它们可以给出关于程序内部所发生的更有价值的信息。探查分析器会在类加载时更改类的字节码（即插入统计调用次数的代码
+等） 。相比采样分析器，探查分析器更可能会将性能偏差引入应用。
+
++ 优先优化哪些调用次数更多的方法，会获得更大的性能提升。
+
++ 如果希望能看到那些阻塞调用所花费的时间，即线程在 wait() ——等待其他线程唤醒——中的用时决定了许多应用的整体执行时间。那么在大多数基于 Java 的性能分析器可以通过设置过滤器和调整其他选项来显示或隐藏这些阻塞方法。
+
++ Oracle Solaris Studio是一个非常有用的分析Linux的性能分析器。
+
++ 基于Java 的性能分析工具所不能提供的——应用花在 GC 上的时间。在基于 Java 的性能分析工具中，GC 线程的影响几乎看不到。 （除非测试所运行的机器是 CPU 受限，否则编译器线程占用大量时间并无大碍：虽然编译线程会消耗大量的 CPU 时间，但只要机器上有更多可用的 CPU，应用自身就不受影响，因为编译是在后台发生。 ）因此，可以考虑使用Oracle Solaris Studio等c/c++性能分析器。
+
++ 性能分析器是查找性能瓶颈最重要的工具，但你必须学会如何使用它们，然后找到需要优化的代码区域。
+
++ 商业版 Java 7（从 7u40 开始）和 Java 8 包含了称为 Java Mission Control（以下称 JMC）的监控新特性。该特性不开源，需要付费购买。
+
++ JMC 的关键特性是 Java 飞行记录器（Java Flight Recorder，JFR） 。正像它名字所暗示的，JFR 数据是 JVM 的历史事件，这些可以用来诊断 JVM 的历史性能和操作。JFR 的基本操作是开启一组事件（例如，线程等待某个锁而被阻塞的事件） 。每当选择的事件发生时，就会保存相应的数据（保存在内存或文件中） 。数据流保存在循环缓冲中，所以只有最近的事件。JMC 可以显示这些事件——实时从 JVM 获取或者从文件读取——你可以对这些事件进行分析，诊断性能问题。 JFR的详细使用，见书中。
+
 + 
