--- a/blog/2016/06/read-java-performance-definitive-guide.Rmd
+++ b/blog/2016/06/read-java-performance-definitive-guide.Rmd
@@ -251,4 +251,158 @@ jinfo 可以更改任意标志的值，但并不意味着 JVM 会响应更改。
 
 + JMC 的关键特性是 Java 飞行记录器（Java Flight Recorder，JFR） 。正像它名字所暗示的，JFR 数据是 JVM 的历史事件，这些可以用来诊断 JVM 的历史性能和操作。JFR 的基本操作是开启一组事件（例如，线程等待某个锁而被阻塞的事件） 。每当选择的事件发生时，就会保存相应的数据（保存在内存或文件中） 。数据流保存在循环缓冲中，所以只有最近的事件。JMC 可以显示这些事件——实时从 JVM 获取或者从文件读取——你可以对这些事件进行分析，诊断性能问题。 JFR的详细使用，见书中。
 
+## Java编译器优化
+
++ 大多数情况下,所谓编译器调优,其实就只是为目标机器上的 Java 选择正确的 JVM 和编 译器开关(-client、-server 或 -XX:+TieredCompilation)而已。分层编译通常是长期运 行应用的最佳选择,而对于运行时间短的应用来说,分层编译与 client 编译器的性能差别很小。
+
++ 确实没有什么好的机制可以算出程序所需要的代码缓存。所以,如何增加代码缓存,基本 上就是摸着石头过河,通常的做法是简单地增加 1 倍或 3 倍。-XX:ReservedCodeCacheSize=N(对特定编译器来说,N 为默认的值)标志可以设置代码缓存的最大值。代码缓存的管理和大多数 JVM 内存一样,有初始值(由 -XX:InitialCodeCacheSize=N指定)。代码缓存从初始大小开始分配,一旦充满就会增加(直至最大值)。
+
++ 理解 JVM 保留内存和分配内存方式之间的差别非常重要。这种差别在代码缓存、Java 堆以及其他 JVM 本地内存结构中都存在。
+
++ 代码缓存设为 1 GB,JVM 就会保留 1 GB 的本地内存空间。虽然这部分内存在需要时才会分配,但它仍然是被保留的。
+
++ 分层编译很容易达到代码缓存默认配置的上限(特别是在 Java 7 中)。使 用分层编译时,应该监控代码缓存,必要时应该增加它的大小。
+
++ 触发代码编译的条件。其中最主要的因素是代码执行的频度。一旦执行达到一定次数,且达到了编译阈值,编译器就可以获得足够的信息编译代码了。
+
++ 编译是基于两种 JVM 计数器的:方法调用计数器和方法中的循环回边计数器。回边实际上可看作是循环完成执行的次数,所谓循环完成执行,包括达到循环自身的末尾,也包括 执行了像 continue 这样的分支语句。
+
++ JVM 执行某个 Java 方法时,会检查该方法的两种计数器总数,然后判定该方法是否适合编译。如果适合,该方法就进入编译队列。这种编译没有正式的名称,通常叫标准编译。
+
++ 如果循环真的很长——或因包含所有程序逻辑而永远不退出,又该如何?在这种情 况下,JVM不等方法被调用就会编译循环。所以循环每完成一轮,回边计数器就会增加并被检测。如果循环的回边计数器超过阈值,那这个循环(不是整个方法)就可以被编译。由于仅仅编译循环还不够,JVM必须在循环进行的时候还能编译循环。在循环代码编译结束后,JVM 就会替换还在栈上的代码,循环的下一次迭代就会执行快得多的编译代码。故而称为栈上替换(On-Stack Replacement,OSR)。
+
++ 标准编译由 -XX:CompileThreshold=N 标志触发。使用 client 编译器时,N 的默认值是 1500, 使用 server 编译器时为 10 000。更改 CompileThreshold 标志的值,将使编译器提早(或延 后)编译。然而请注意,尽管有一个标志,但这个标志的阈值等于回边计数器加上方法调 用计数器的总和。
+
++ 更改 OSR 编译阈值的情况非常罕见。事实上,虽然 OSR 编译在基准测试(特别是微基准测试)中经常发生,但在实际运行时并不经常出现。
+
++ VM 供应商提交的基准测试已经验证过上述调优,不同设置的基准测试间并没有什么性能差异。他们使用较低的设置主要基于以下两个原因:
+    1. 节约一点应用热身的时间;
+    2. 使得某些原本可能不会被 server 编译器编译的方法得以编译。
+    
+<blockquote>
+每种计数器的值都会周期性减少(特别是当 JVM 达到安全点时)。
+
+实际上,计数器只是方法或循环最新热度的度量。由此带来的一个副作用是,
+执行不太频繁的代码可能永远不会编译,即便是永远运行的程序(相对于热来说,有时称这些方法为温热 [lukewarm])。
+这就是通过减少编译阈值来进行优化的一种情况,它也是分层编译通常比单独的 server 编译器 要快的原因之一。
+</blockquote>
+
++ 如果开启 PrintCompilation,每次编译一个方法(或循环)时,JVM 就会打印一行被编译 的内容信息。输出的信息在不同的 Java 发布版之间会有所不同，绝大多数编译日志的行具有以下格式: 
+
+```
+timestamp compilation_id attributes (tiered_level) method_name size deopt 
+
+此处的时间戳 timestamp 是编译完成的时间(相对于 JVM 开始的时间 0)。
+
+compilation_id 是内部的任务 ID。通常这个数字只是简单地单调增长,不过在使用 server编译器时(或者某个时刻编译器的线程数增加时),你有时会发现乱序的compilation_id。
+
+
+attributes 是一组 5 个字符长的串,表示代码编译的状态。
+5字符属性串可以同时出现 2 个或多个字符。不同的属性如下所列: 
+
+• %:编译为 OSR。
+• s:方法是同步的。
+• !:方法有异常处理器。
+• b:阻塞模式时发生的编译。
+• n:为封装本地方法所发生的编译。
+
+n 属性表明 JVM 生成了一些编 译代码以便于调用本地方法。
+size是编译后代码的大小(单位是字节)。这是 Java 字节码的大小,不是被编译代码的大小.
+```
+
++ jstat 有两个有关编译器信息的标志。jstat -compiler 标志提供了关于多少方法被编译的概
+要信息;可以用 jstat -printcompilation 标志获取最近被编译的方法。jstat 借助一个可选 参数反复执行操作,你可以看到随时间变化有哪些方法被编译了。
+
++ 书中的《高级编译器调优》一节主要是针对JVM工程师调优JVM的，一般开发者不必须理解。
+
++ PrintCompilation 标志输出的讨论中曾提到两种代码逆优化的情况。逆优化意味着编译器 不得不“撤销”之前的某些编译;结果是应用的性能降低，有两种逆优化的情形:代码状态分别为“made not entrant”(代码被丢弃)和“made zombie”(产生僵尸代码)时。
+
++ 大概来说，在分层编译中,代码先由 client 编译器编译,然 后由 server 编译器编译。
+
++ 一般来说,像僵尸代码重编译 这样小的操作对大多数应用都不会有显著的影响。
+
+### Java垃圾收集
+
++ 垃圾收集由两步构成:查找不再使用的对象,以及释放这些对象所管理的内存。
+
++ 垃圾收集的性能就是由这些基本操作所决定的: 找到不再使用的对象、回收它们使用的内存、对堆的内存布局进行压缩整理。
+
++ 垃圾收集器回收对象,或者在内存中移动对象时,必须确 保应用程序线程不再继续使用这些对象。这一点在收集器移动对象时尤其重要:在操作过 程中,对象的内存地址会发生变化,因此这个过程中任何应用线程都不应再访问该对象。所有应用线程都停止运行所产生的停顿被称为时空停顿(stop-the-world)。通常这些停顿对 应用的性能影响最大,调优垃圾收集时,尽量减少这种停顿是最为关键的考量因素。
+
++ 所有的垃圾收集器都遵循了同一个方式,即根据情况将 堆划分成不同的代(Generation)。这些代被称为“老年代”(Old Generation 或 Tenured Generation)和“新生代”(Young Generation)。新生代又被进一步地划分为不同的区段, 分别称为 Eden 空间和 Survivor 空间(不过 Eden 有时会被错误地用于指代整个新生代)。
+
++ 采用分代机制的原因是很多对象的生存时间非常短。
+
++ 对象首先在新生 代中分配。新生代填满时,垃圾收集器会暂停所有的应用线程,回收新生代空间。不再使用 的对象会被回收,仍然在使用的对象会被移动到其他地方。这种操作被称为 Minor GC。采用这种设计有两个性能上的优势。其一,由于新生代仅是堆的一部分,与处理整个堆相 比,处理新生代的速度更快。第二个优势源于新生代中对象分配的方式。对象分配于 Eden 空间(占据了新生代空间的 绝大多数)。垃圾收集时,新生代空间被清空,Eden 空间中的对象要么被移走,要么被回 收;所有的存活对象要么被移动到另一个 Survivor 空间,要么被移动到老年代。由于所有 的对象都被移走,相当于新生代空间在垃圾收集时自动地进行了一次压缩整理。
+
++ 所有的垃圾收集算法在对新生代进行垃圾回收时都存在“时空停顿”现象。
+
++ 对象不断地被移动到老年代,最终老年代也会被填满,JVM 需要找出老年代中不再使用 的对象,并对它们进行回收。而这便是垃圾收集算法差异最大的地方。简单的垃圾收集算法直接停掉所有的应用线程,找出不再使用的对象,对其进行回收,接着对堆空间进行整 理。这个过程被称为 Full GC,通常导致应用程序线程长时间的停顿。
+
++ 有可能在应用线程运行的同时找出不再使用的对象;CMS 和 G1 收集器就是通过这种方式进行垃圾收集的。由于它们不需要停止应用线程 就能找出不再用的对象,CMS 和 G1 收集器被称为 Concurrent 垃圾收集器。同时,由于它 们将停止应用程序的可能降到了最小,也被称为低停顿(Low-Pause)收集器(有时也称 为无停顿收集器,虽然这个叫法相当不确切)。Concurrent收集器也使用各种不同的方法对老年代空间进行压缩。
+使用 CMS 或 G1 收集器时,应用程序经历的停顿会更少(也更短)。其代价是应用程序会消耗更多的CPU。CMS 和 G1 收集也可能遭遇长时间的 Full GC 停顿(尽量避免发生那样 的停顿是这些调优算法要考虑的重要方面)。
+
++ 评估垃圾收集器时,想想你需要达到的整体性能目标。每一个决定都需要权衡取舍。如果 应用对单个请求的响应时间有要求(譬如 Java 企业版服务器),你应该考虑下面这些因素。
+• 单个请求会受停顿时间的影响——不过其受 Full GC 长时间停顿的影响更大。如果目标 是要尽可能地缩短响应时间,那么选择使用 Concurrent 收集器更合适。
+• 如果平均响应时间比最大响应时间更重要(譬如 90% 的响应时间),采用 Throughput 收 集器通常就能满足要求。
+• 使用 Concurrent 收集器来避免长的停顿时间也有其代价,这会消耗额外的 CPU。
+
++ 为批量应用选择垃圾收集器可以遵循下面的原则。
+• 如果 CPU 足够强劲,使用 Concurrent 收集器避免发生 Full GC 停顿可以让任务运行得 更快。
+• 如果 CPU 有限,那么 Concurrent 收集器额外的 CPU 消耗会让批量任务消耗更多的时间。
+
++ JVM 提供了以下 4 种不同的垃圾收集算法：Serial垃圾收集器，Throughput垃圾收集器，CMS收集器，G1垃圾收集器。
+
++ Serial 垃圾收集器是四种垃圾收集器中最简单的一种。如果应用运行在 Client 型虚拟机 (Windows 平台上的 32 位 JVM 或者是运行在单处理器机器上的 JVM)上,这也是默认的
+垃圾收集器。
+Serial 收集器使用单线程清理堆的内容。使用 Serial 收集器,无论是进行 Minor GC 还是 Full GC,清理堆空间时,所有的应用线程都会被暂停。进行 Full GC 时,它还会对老年代 空间的对象进行压缩整理。通过 -XX:+UseSerialGC 标志可以启用 Serial 收集器。
+
++ Throughput 收集器是 Server 级虚拟机(多 CPU 的 Unix 机器以及任何 64 位虚拟机)的默 认收集器。
+Throughput 收集器使用多线程回收新生代空间,Minor GC 的速度比使用 Serial 收集器快 得多。处理老年代时 Throughput 收集器也能使用多线程方式。这已经是 JDK 7u4 及之后 的版本的默认行为,对于之前老版本的 JDK 7 虚拟机,通过 -XX:+UseParallelOldGC 标 志可以开启这个功能。由于 Throughput 收集器使用多线程,Throughput 收集器也常常 被称为 Parallel 收集器。Throughput 收集器在 Minor GC 和 Full GC 时会暂停所有的应 用线程,同时在 Full GC 过程中会对老年代空间进行压缩整理。由于在大多数适用的场 景,它已经是默认的收集器,所以你基本上不需要显式地启用它。如果需要,可以使用 -XX:+UseParallelGC、-XX:+UseParallelOldGC 标志启用 Throughput 收集器。
+
++ CMS 收集器设计的初衷是为了消除 Throughput 收集器和 Serial 收集器 Full GC 周期中 的长时间停顿。CMS 收集器在 Minor GC 时会暂停所有的应用线程,并以多线程的方式 进行垃圾回收。然而,这其中最显著的不同是,CMS 不再使用 Throughput 的收集算法(-XX:+UseParallelGC),改用新的算法来收集新生代对象(使用 -XX:+UseParNewGC 标志)。
+
++ CMS 收集器在 Full GC 时不再暂停应用线程,而是使用若干个后台线程定期地对老年代空 间进行扫描,及时回收其中不再使用的对象。这种算法帮助 CMS 成为一个低延迟的收集 器:应用线程只在 Minor GC 以及后台线程扫描老年代时发生极其短暂的停顿。应用程序 线程停顿的总时长与使用 Throughput 收集器比起来短得多。
+这里额外付出的代价是更高的 CPU 使用:必须有足够的 CPU 资源用于运行后台的垃圾收 集线程,在应用程序线程运行的同时扫描堆的使用情况。除此之外,后台线程不再进行任 何压缩整理的工作,这意味着堆会逐渐变得碎片化。如果 CMS 的后台线程无法获得完成 他们任务所需的 CPU 资源,或者如果堆变得过度碎片化以至于无法找到连续空间分配对 象,CMS 就蜕化到 Serial 收集器的行为:暂停所有应用线程,使用单线程回收、整理老年 代空间。这之后又恢复到并发运行,再次启动后台线程(直到下一次堆变得过度碎片化)。 通过 -XX:+UseConcMarkSweepGC、-XX:+UseParNewGC 标志(默认情况下,这两个标志都是禁 用的)可以启用 CMS 垃圾收集器。
+
++ G1 垃圾收集器(或者垃圾优先收集器)的设计初衷是为了尽量缩短处理超大堆(大于 4 GB)时产生的停顿。G1 收集器属于 Concurrent 收集器。 其处理新生代的方式和其他多线程收集算法类似。老年代的垃圾收集工作由后台线程完成,大多数的工 作不需要暂停应用线程。由于老年代被划分到不同的区域,G1 收集器通过将对象从一个 区域复制到另一个区域,完成对象的清理工作,这也意味着在正常的处理过程中,G1 收 集器实现了堆的压缩整理(至少是部分的整理)。因此,使用 G1 收集器的堆不大容易发生 碎片化——虽然这种问题无法避免。通过标志 -XX:+UseG1GC (默认值是关闭的)可以启动 G1 垃圾收集器。
+
++ G1 的设计理念使得它比 CMS 更不容易遭遇 Full GC。
+
++ Java 也提供了一种机制让应用程序强制进行 GC: 调用 System.gc() 方法。通常情况 下,试图通过调用这个方法显式触发 GC 都不是个好主意。调用这个方法会触发Full GC(即使 JVM 使用 CMS 或者 G1 垃圾收集器), 应用程序线程会因此而停顿相当长 的一段时间。调用这个方法也不会让应用程序更高效。
+
++ 在做性能监控或者基准测试时。运行少量的代码进行基准 测试时,为了更快地预热 JVM,在测量周期之前强制进行一次 GC 还是有意义的。类 似的情况还包括在进行堆分析时,通常在获取堆转储之前,强制进行一次 Full GC 是 一个不错的主意。虽然大多数抓取堆转储的方法都能进行 Full GC,也存在其他的方法 可以强制进行 Full GC:你可以通过执行 jcmd < 进程号 > GC.run,或者使用 jconsole 连接到 JVM 在内存面板上单击“进行 GC”按钮。
+
++ 如果你运行的程序调用的第三方代码中错误地调用了 System.gc() 方法,可以通过 JVM 参数 -XX:+DisableExplicitGC 显式地禁止这种类型的 GC;默认情况下该标志是关闭的。
+
++ GC 算法的选择一方面取决于应用程序的特征,另一方面取决于应用的性能目标。
+
++ Serial 收集器最适用于应用程序的内存使用少于 100 MB 的场景。
+
++ 对批量任务而言,Throughput 收集器所引入的停顿,尤其是 Full GC 的停顿是主要的顾虑。如果有额外的 CPU 处理能力(这很可能是个问题),那么对批处理程序使用 Concurrent 收集器将极大 地提升应用程序的性能。这里的关键在于我们能否提供足够的 CPU 给 Concurrent 收集器 的线程进行后台的处理工作。
+
++ 多个应用程序线程、多个后台 GC 线程运行于多 CPU 的 系统上。如果操作系统无法在同时运行所有应用程序线程和 GC 后台线程,那么对 CPU 的 竞争就会反映到应用程序线程的停顿上。
+
++ 只有一个 CPU 可用时,CPU 将一直处于忙碌状态,要么是运行应用程序线程,要么是运 行 GC 线程。这种情况下,CMS 额外的后台线程就变成了一种负担。因此，如果使用CMS和G1收集器，必须保证足够的CPU资源，否则反而会降低系统性能。
+
++ 存在空闲 CPU 周期时,Concurrent收集器（CMS或G1）的性能更好；否则，Concurrent收集器会急剧下降，低于Throughput收集器。
+
++ 如果你关 注的仅仅是平均响应时间,那么 Throughput 收集器和 Concurrent 收集器似乎差别不大,都 能满足你的要求,你可以进一步考察 CPU 的使用情况(这时 Throughput 收集器可能是更 优的选择)。如果你关注的是 90% 或者其他百分比的响应时间,那就只能通过性能测试来 了解,完成这些任务应用程序会进行多少次 Full GC,最后决定选择哪种收集器。通常CMS收集器在百分比（如99%，90%）上的响应时间值更优秀。
+
++ 通常情况下,Throughput 收集器的平均响应时间比 Concurrent 收集器要好,但是在 90% 响应时间或者 99% 响应时间这几项指标上, Concurrent收集器比Throughput收集器要好一些。
+
++ 使用 Throughput 收集器会超负荷地进行大量 Full GC 时,切换到 Concurrent 收集器通常能获得更低的响应时间。可以查看FullGC的频率和次数，以决定。
+
++ 一般情况下,堆空间小于 4 GB时,CMS 收集器的性能比 G1 收集器好。CMS 收集器使用的算法比 G1 更简单,因此在比较简单的环境中(譬如堆的容量很小的情况),它运行得更快。使用大型堆或巨型堆时, 由于 G1 收集器可以分割工作,通常它比 CMS 收集器表现更好。因此，对于现代大多数的应用服务器（通常堆空间均大于8G）来说，G1的表现要好于CMS。
+
++ 由于 CMS 收集器不对堆进行压缩整理(除非发生了耗时的 Full GC),堆的碎片化也会触 发 CMS 收集器进行 Full GC。G1 算法在处理过程中随时进行着堆的压缩整理,不过 G1 收 集器依然可能遭遇堆的碎片化问题,但是与 CMS 收集器比较起来,它的设计让它又领先 了一步。
+
++ 在这三种收集器（Throughput、CMS、G1）的选择时还有一些微妙的无形因素需要考虑。Throughput 收集器是 这三个收集器中年代最久远的一个,这意味着 JVM 工程师们已经花费了大量的时间精力 雕琢把玩它,它的习性也更为大家所熟知。G1 作为相对较新的一种垃圾收集算法,更容 易碰到设计时无法预期的极端情况。相对而言,G1 算法中影响性能的调优控制开关更少, 这可能是好事,也可能是坏事。直到 Java 7u4,G1 都一直被当作实验版本,它的一些调优 特性直到 Java 7u10 中才提供出来。相对于 Java 7 及之前的版本而言,G1 的性能提升主要 体现在 Java 8 中。G1 将来的工作可能会关注在如何提高它在较小的堆上相对于 CMS 的性 能优势。
+
++ 选择 Concurrent 收集器时,如果堆较小,推荐使用 CMS 收集器。
+
++ 简单粗暴 地设置一个特别大的堆也不是解决问题的方法。GC 停顿消耗的时间取决于堆的大小,如果增大堆的空间,停顿的持续时间也会变长。这种情况下,停顿的频率会变得更少,但是 它们持续的时间会让程序的整体性能变慢。
+
++ 如果 Full GC 时系统发生内存交换,停顿时间会以正常停顿 时间数个量级的方式增长。类似地,如果使用 Concurrent 收集器,后台线程在回收堆时, 它的速度也可能会被拖慢,因为需要等待从磁盘复制数据到内存,结果导致发生代价昂贵 的并发模式失效。因此,调整堆大小时首要的原则就是永远不要将堆的容量设置得比机器的物理内存还大, 另外,如果同一台机器上运行着多个 JVM 实例,这个原则适用于所有堆的总和。除此之 外,你还需要为 JVM 自身以及机器上其他的应用程序预留一部分的内存空间:通常情况 下,对于普通的操作系统,应该预留至少 1 G 的内存空间。
+
 + 
