--- a/blog/2016/06/read-java-performance-definitive-guide.Rmd
+++ b/blog/2016/06/read-java-performance-definitive-guide.Rmd
@@ -544,4 +544,55 @@ long ms = SoftRefLRUPolicyMSPerMB * AmountOfFreeMemoryInMB;
 
 ## 线程与同步
 
++ 在使用线程池时，有一个因素非常关键：调节线程池的大小对获得最好的性能至关重要。
+
++ 所有线程池的工作方式本质是一样的：有一个队列，任务被提交到这个队列中。 （可以有不止一个队列，概念是一样的。）一定数量的线程会从该队列中取任务，然后执行。任务的结果可以发回客户端（比如应用服务器的情况下） ，或保存到数据库中，或保存到某个内部数据结构中，等等。但是在执行完任务后，这个线程会返回任务队列，检索另一个任务并执行（如果没有更多任务要执行，该线程会等待下一个任务） 。
+
++ 对于IO密集型应用，不适合添加过多线程（对比下Redis）；对于CPU密集型而言，通常是cpu个数。混合情况下的一般经验是cpu + 1 ~ 2*cpu。
+
++ 对于容纳等待执行任务的队列，线程池通常会限制其大小。如果队列太大，其中的任务就必须等待很长时间，这通常就等同于“未处理”。如果达到了队列数限制，再添加任务就会失败。 ThreadPoolExecutor
+有一个 rejectedExecution 方法，用于处理这种情况。
+
++ 根据所选任务队列的类型， ThreadPoolExecutor 会决定何时启动一个新线程：
+
+<blockquote>
+1. SynchronousQueue
+
+如果所有的线程都在忙碌，而且池中的线程数尚未达到最大，则新任务会启动一个新线程。然而，这个队列没办法保存等待的任务：如果来了一个任
+务，创建的线程数已经达到最大值，而且所有线程都在忙碌，则新的任务总是会被拒绝。也就是说，此时能同时处理的任务数，就等同于最大线程数。
+
+2. 无界队列
+
+不会拒绝任何任务（因为队列大小没有限制） 。这种情况下， ThreadPoolExecutor 最多仅会按最小线程数创建线程，也就是说，最大线程池大小被忽略了。
+
+3. 会采用一个非常复杂的算法。比如，假设池的核心大小为 4，最大为 8，所用的 ArrayBlockingQueue 最大为 10。随着任务到达并被放到队列中，线程池中最多会运行 4 个线程（也就是核心大小） 。即使队列完全填满，也就是说有 10 个处于等待状态的任务， ThreadPoolExecutor 也是只利用 4个线程。如果队列已满，而又有新任务加进来，此时才会启动一个新线程。这里不会因为队列已满而拒绝该任务，相反，会启动一个新线程。新线程会运行队列中的第一个任务，为新来的任务腾出空间。在这个例子中，池中会有 8 个线程（最大线程数）的唯一一种情形是，有 7 个任务正在处理，队列中有 10 个任务，这时又来了一个新任务。这个算法背后的理念是，该池大部分时间仅使用最小线程数（4 个） ，即使有适量的任务在队列中等待运行。这时线程池就可以用作节流阀（这是很有好处的） 。如果积压的请求变得非常多，该池就会尝试运行更多线程来清理；这时第二个节流阀——最大线程数——就起作用了。
+</blockquote>
+
++ Java 7 引入了一个新的线程池： ForkJoinPool 类。这个类看上去和其他任何线程池都很像；和 ThreadPoolExecutor 类一样，它也实现了 Executor 和 ExecutorService 接口。在支持这些接口方面， ForkJoinPool 在内部会使用一个无界任务列表，供构造器中所指定数目（如果所选的是无参构造器，则为该机器上的 CPU 数）的线程来运行。
+
++ ForkJoinPool 类是为配合分治算法的使用而设计的：任务可以递归地分解为子集。这些子集可以并行处理，然后每个子集的结果被归并到一个结果中。一个经典的例子就是快速排序算法。分治算法的重点是，算法会创建大量的任务，而这些任务只有相对较少的几个线程来管理。因为父任务必须等待子任务完成，所以无法使用 ThreadPoolExecutor 高效实现这个算法。
+ThreadPoolExecutor 内的线程无法将另一个任务添加到队列中并等待其完成：一旦线程进入等待状态，就无法使用该线程执行它的某个子任务了。另一方面， ForkJoinPool 则允许其中的线程创建新任务，之后挂起当前的任务。当任务被挂起时，线程可以执行其他等待的任务。
+
++  ForkJoinPool 和 ThreadPoolExecutor 这两个类之间有什么权衡取舍呢？
+
+<blockquote>
+1. 首先，fork/join 范型所实现的挂起，使得所有任务可以交由少量的线程执行。其实fork/join相当于实现了**用户态的线程**，与Hawtdispatch、Gorouting、Actor等很相似。
+2. ForkJoinPool 还有一个额外的特性，它实现了工作窃取（work-stealing） 。这基本上就是一个实现细节了；这意味着池中的每个线程都有自己所创建任务的队列。线程会优先处理自己队列中的任务，但如果这个队列已空，它会从其他线程的队列中窃取任务。其结果是，即使 200 万个任务中有一个需要很长的执行时间， ForkJoinPool 中的其他线程也可以完成其余的随便什么任务。 ThreadPoolExecutor 则不会这样：如果一个任务需要很长的时间，其他线程并不能处理额外的工作。
+</blockquote>
+
++ 一般而言，如果任务是均衡的，使用分段的 ThreadPoolExecutor性能更好；而如果任务是不均衡的，则使用 ForkJoinPool 性能更好。对于应用服务器而言，一般请求都是不均衡的，因此fork/join更好。
+
++ 请仔细考虑 fork/join 范型应该在哪个点结束递归，即总任务数。
+
++ Java 8 向 Java 中引入了自动并行化特定种类代码的能力。这种并行化就依赖于ForkJoinPool 类的使用。Java 8 为这个类加入了一个新特性：一个公共的池，可供任何没有显式指定给某个特定池的 ForkJoinTask 使用。这个公共池是 ForkJoinPool 类的一个static 元素，其大小默认设置为目标机器上的处理器数。
+
++ 设置 ForkJoinTask 池的大小和设置其他任何线程池同样重要。默认情况下，公共池的线程数等于机器上的 CPU 数。如果在同一机器上运行着多个 JVM，则应限制这个线程数，以防这些 JVM 彼此争用 CPU。类似地，如果 Servlet 代码会执行某个并行任务，而我们想确保 CPU 可供其他任务使用，可以考虑减小公共池的线程数。另外，如果公共池中的任务会阻塞等待 I/O或其他数据，也可以考虑增大线程数。这个值可以通过设置系统属性 -Djava.util.concurrent.ForkJoinPool.common.parallelism=N
+来指定。
+
++ 在使用并行 Stream 构造或其他自动并行化特性时，如果需要调整公共池的大小，可以考虑将所需的值减 1。
+
++ ForkJoinPool 类应该用于递归、分治算法。
+
++ 应该花些心思来确定，算法中的递归任务何时结束最为合适。创建太多任务会降低性能，但如果任务太少，而任务所需的执行时间又长短不一，也会降低性能。
+
 + 
