--- a/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
+++ b/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
@@ -338,7 +338,17 @@ DB 缓存 分布式系统 搜索引擎
 7. 跨库数据排序、函数聚合、平均值等等
 </blockquote>
 
-+ 分布式事务和2PC对于大多数应用场景来说，代价太大。
++ 分布式事务（2PC和3PC是分布式事务的实现算法）对于大多数应用场景来说，代价太大，主要是体现在几个方面：
+
+```
+1. 引入协调者，还必须保证协调者的高可用（无单点）
+2. 由于参与节点的增多，同时需要保证事务的ACID特性，
+   因此，原本在单机事务中的性能损耗（相比于非事务），会被急剧放大。
+3. 回滚操作代价大
+
+就第一点而言，在采用MQ保证最终一致性的方案中，仍然存在类似代价，
+因此，其相比[2, 3]而言，其并非最关键的代价。
+```
 
 + CAP
 
@@ -348,11 +358,13 @@ Consistency
 Availability 
     强可用性，无论成功或失败，每个请求都必须收到一个反馈。重点是系统一定要有响应。
 Partition tolerance 
-    系统的部分节点失效或者消息丢失，系统仍然可以继续运行不至于所有节点宕机。
+    系统的部分节点失效或者消息丢失，系统仍然可以继续运行（运行的意义是处理逻辑）。
 
-CA: 就是传统单机数据库的选择。
+CA: 就是传统单机数据库的选择，即事务，分布式事务也是如此，
 CP: 可用性低。
 AP: 放弃强一致性，大多数分布式系统的选择。
+
+分布式事务牺牲P，保证CA：只要（事务的）任何一部分出错，整个系统就必须停止运行，否则就无法保证C。
 ```
 
 + 分布式系统中，一般选择AP，对于C（一致性），采用BASE模型解决：
@@ -363,7 +375,7 @@ Soft State 软状态，接受一段时间的数据不同步。
 Eventually Consistent 最终一致性，保证（各个节点）最终数据的状态是一致的。
 ```
 
-+ Paxos是比2PC更轻量级的保证分布式一致性的协议。其有一个基本前提是不存在拜占庭将军问题（就是网络不可信），即必须保证可信的通信环境（比如数据包不可篡改）。
++ Paxos是比2PC（和3PC）更轻量级的保证分布式一致性的协议，它保证的是最终一致性，非强一致性。其有一个基本前提是不存在拜占庭将军问题（就是网络不可信），即必须保证可信的通信环境（比如数据包不可篡改）。
 
 + Quorum算法是用来衡量分布式系统的可用性和一致性的：
 
@@ -416,8 +428,59 @@ ID生成方案：
     4.2 归并排序，需要在效率和准确性之间权衡。
 ```
 
-+ 
++ 在分布式跨库查询结果的归并中，ORM具有如下缺点：
 
+```
+1. 多余的对象映射和生成
+2. 必须在应用端聚合
+```
+
++ 数据访问层的实现：
+
+```
+1. JAR，如tddl
+    
+2. Proxy 即中间件，如MySQL Proxy、MyCat、ShardingJDBC等
+    2.1 自有协议
+    2.2 数据库协议
+```
+
++ 读写分离的数据复制方式：
+
+```
+1. 数据库binlog
+2. 数据分发平台，支持将数据库变更到其他数据源，如缓存、搜索引擎等
+```
+
++ 数据平滑迁移
+
+```
+1. 可停机迁移 简单
+2. 不可停机迁移
+    2.1 利用中间件不停机迁移，如Flume、Kafka、RocketMQ等
+        保证迁移速度大于数据增量速度，通过两个速度的比值，可以估计迁移时间。
+    2.2 利用中间件对新的增量数据双写；同时，对既有数据并行迁移。
+```
+
+## 消息中间件
+
++ MQ两个核心特点：
+
+```
+1. 应用解耦
+2. 操作异步
+```
+
++ MQ的衡量指标：
+
+```
+1. 消息顺序保证性
+2. 可扩展性（分布式，不是单点）
+3. 消息可靠性（内存or磁盘，保证消息不丢）
+4. 群组订阅
+```
+
++ 
 
 
 
