--- a/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
+++ b/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
@@ -480,7 +480,90 @@ ID生成方案：
 4. 群组订阅
 ```
 
-+ 
++ 消息订阅方式：
 
+```
+1. 非持久订阅 订阅状态与消息订阅者状态相关
+2. 持久订阅   订阅状态与消息订阅者状态相关
+```
+
++ 保证消息可靠性：
+
+```
+1. 持久订阅
+2. 消息发送端可靠性保证 当且仅当MQ及时、明确返回成功，消息发送端才认为消息发送成功；
+   其他情况，如返回错误、异常、超时等，均视为发送失败，需要重发。
+3. MQ消息存储可靠性保证 必须存储在磁盘上
+   3.1 基于文件 自建引擎 or 开源引擎
+   3.2 基于关系数据库 
+       3.2.1 库表设计 [消息表 + 投递表]
+             缺点：投递消息表的数据量与[消息数 * 订阅者]成比例，数据量过大。
+       3.2.2 库表设计 [消息表 + 投递字段]
+             缺点: 无法方便地从订阅者维度对投递状态进行更新。投递字段长度限制。
+       3.3.3 存储容灾 多机Replication，延迟问题。
+       3.3.4 存储容灾 双写，复杂性。
+   3.3 基于双机内存 并非完全安全，但性能高
+   3.4 扩容 
+       3.4.1 消息存储独立 存储扩容、调度器扩容（无状态，更易扩容）
+       3.4.1 消息调度存储一体 趋势 RocketMQ、Kafka
+4. 消息投递的可靠性保证 
+   4.1 当且仅当消费端明确返回成功，MQ才认为消息接收成功。
+   4.2 消费者不应该在消息的业务处理完成前返回接收成功响应。
+```
+
++ 消息投递通常是多线程的，具体到单个投递线程，其实现方式有：
+
+```
+1. 阻塞式 投递后阻塞等待消费端返回
+2. 非阻塞式 投递后不等待消费端返回，直接投递其他消息；启用单独的[投递状态更新线程]
+   异步[及时/定时批量]更新。
+   
+其实和IO模型类似。
+```
+
++ 单应用存在多个订阅者订阅相同topic的优化：
+
+```
+1. 共享socket连接。
+2. 消息只发送一次，消费端增加一个dispatcher，负责将消息分发给不同订阅者。
+```
+
++ 消息重复的产生和应对:
+
+```
+1. 生成端重试
+   1.1 生成端发送到MQ后，MQ正常存储，随后MQ出现问题，没有响应给生成端。
+   1.2 MQ负载过高，导致没能及时给生成端发送响应，导致超时。
+   1.3 MQ存储消息后，网络问题导致没能发送响应，生成端重试时，网络又恢复。
+   
+解决方案：
+   1.1 消费端重发时使用相同ID，即消息ID不在MQ生成，由客户端生成。
+   1.2 分布式事务，在高可用、高并发的互联网应用没法实行。
+   1.2 消息消费者对消息的处理操作保持幂等性。
+
+2. MQ重复投递
+   2.1 消费端接收消息，成功处理后，应用出现问题，没有给MQ发送响应
+   2.2 消费端接收消息，成功处理后，网络出现问题，没有给MQ发送响应
+   2.3 消费端接收消息，处理时间较长后，导致MQ等待响应超时
+   2.4 消费端接收消息，成功处理后，发送响应给MQ，但此时MQ出现问题，
+       没能处理响应
+   2.5 消费端接收消息，成功处理后，发送响应给MQ，但此时消息存储错误，
+       没有更新消息处理状态
+       
+解决方案：
+   1.1 分布式事务，在高可用、高并发的互联网应用没法实行。
+   1.2 消息消费者对消息的处理操作保持幂等性。
+```
+
++ 操作幂等性
+
+```
+写操作的幂等性是比较难保证的，一个通用的做法是CAS（Compare And Set），比如：
+
+幂等：  update table set m = 10 where id = 1 and m = 15;
+非幂等：update table set m = m + 10 where id = 1;
+
+CAS带来一个问题：原值从哪里来？如果完全重客户端来，那么又涉及安全性。
+```
 
 
