--- a/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
+++ b/blog/2016/07/read-website-architecture-and-java-middleware-practice.Rmd
@@ -490,7 +490,7 @@ ID生成方案：
 + 保证消息可靠性：
 
 ```
-1. 持久订阅
+1. 持久订阅 不会因消费者或MQ的宕机，导致消息订阅无效
 2. 消息发送端可靠性保证 当且仅当MQ及时、明确返回成功，消息发送端才认为消息发送成功；
    其他情况，如返回错误、异常、超时等，均视为发送失败，需要重发。
 3. MQ消息存储可靠性保证 必须存储在磁盘上
@@ -538,7 +538,7 @@ ID生成方案：
    
 解决方案：
    1.1 消费端重发时使用相同ID，即消息ID不在MQ生成，由客户端生成。
-   1.2 分布式事务，在高可用、高并发的互联网应用没法实行。
+   1.2 分布式事务，在高可用、高并发的互联网应用没法实行。可以直接PASS。
    1.2 消息消费者对消息的处理操作保持幂等性。
 
 2. MQ重复投递
@@ -551,19 +551,79 @@ ID生成方案：
        没有更新消息处理状态
        
 解决方案：
-   1.1 分布式事务，在高可用、高并发的互联网应用没法实行。
+   1.1 分布式事务，在高可用、高并发的互联网应用没法实行。可以直接PASS。
    1.2 消息消费者对消息的处理操作保持幂等性。
+   1.2 消费端保存消息消费状态，并保证状态更新操作与消息处理操作是一个
+       本地事务。
+   
+应对思路：
+   1. 消除重发行为（如生成端重试和MQ重复投递）
+      总的思路： [消息唯一ID] + [消息(投递或消费)状态表] + [多个本地事务]
+   2. 消除重复行为的副作用，即保持消息处理方的操作幂等性。
 ```
 
 + 操作幂等性
 
 ```
-写操作的幂等性是比较难保证的，一个通用的做法是CAS（Compare And Set），比如：
+对单个写操作而言，保持幂等性的一个常用做法是CAS（Compare And Set），比如：
 
 幂等：  update table set m = 10 where id = 1 and m = 15;
 非幂等：update table set m = m + 10 where id = 1;
 
-CAS带来一个问题：原值从哪里来？如果完全重客户端来，那么又涉及安全性。
+CAS带来一个问题：原值从哪里来？如果完全从客户端来，那么又涉及对客户端数据的
+信任问题。
+
+对具体的业务操作（可能包含多个写相互关联的写操作）而言，需要具体分析如何实现
+幂等性。并且并非所有操作都可以转换为幂等性。
 ```
 
++ MQ单机多队列（topic）的优化：
 
+```
+MQ单机中的物理队列过多会导致“随机写”，性能急剧下降。
+
+解决方式：
+
+将队列分为“物理队列”和“逻辑队列”，其中物理队列“顺序写”实际的消息，而逻辑队列
+是“被订阅的队列”。逻辑队列相当于是一个“数据（存储在物理队列）索引队列”。但这
+种方法，会导致另外的问题：
+
+1. 读消息时，会先读逻辑队列，再读物理队列，多了一次开销。
+2. 编程复杂性
+3. 读变成了完全随机读
+
+对上述三个问题，可以进行如下优化：
+
+1. 增大内存，尽量让读命中Page Cache
+2. 系统IO调度方式设置为NOOP，会在一定程度上将随机读转换为顺序跳读。
+3. 物理队列中保存元信息，即使逻辑队列丢失，仍然可以通过物理队列恢复。
+```
+
++ MQ的PUSH和PULL模式对比：
+
+||PUSH|PULL|
+|--|--|--|
+|传输状态|保存在MQ端|保存在消费端|
+|实时性|非常高|短轮询取决于轮询时间，长轮询与PUSH一致|
+|传输重试|MQ维护传输状态，失败重试|不需要|
+|流控机制|MQ端依据订阅者消费能力推送|消费端根据自身能力决定|
+
+<blockquote>
+**长轮询**
+
+基本思想是在每次客户端发出请求后，服务器检查上次返回的数据与此次请求时的数据之间是否有更新，如果有更新则返回新数据并结束此次连接，否则服务器“hold”住此次连接，直到有新数据时再返回相应。服务端关闭连接后，客户端一般会立即再重新发起请求。而这种长时间的保持连接可以通过设置一个较大的timeout实现。
+
+相比**短轮询**，其实时性更好，并且不会给服务器端无谓的Pull请求负担。
+相比**长连接**，其
+</blockquote>
+
+## 软负载和集中配置管理
+
++ 软负载的两个基本功能: 
+
+```
+注意此处的软负载，更准确的说是[寻址型软负载]，不是[代理型软负载]。
+
+1. 地址聚合
+2. 生命周期感知
+```
